src/objects/PI_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PI Assignments</relationshipLabel>
        <relationshipName>PI_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PI_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PI Project</label>
        <referenceTo>PI_Project__c</referenceTo>
        <relationshipLabel>PI Assignments</relationshipLabel>
        <relationshipName>PI_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PI Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PIA-{000000}</displayFormat>
        <label>PI Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PI Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>